--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@egjs/vue-flicking": "^3.7.3",
     "animate.css": "^4.1.1",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
@@ -15,6 +16,7 @@
     "scrollreveal": "^4.0.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "vue": "^2.6.11",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^3.2.0",
     "vue-scroll-reveal": "^1.0.11",
     "vue-scrollto": "^2.20.0",
