--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "autoprefixer": "^9.8.6",
     "core-js": "^3.6.5",
+    "lottie-web": "^5.7.11",
     "scrollreveal": "^4.0.9",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "vue": "^2.6.11",
